# gnome-brightness

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
data/: com.verso.GnomeBrightness.desktop.in  io.github.weversonl.GnomeBrightness.desktop.in
po/: POTFILES.in  en_US.po  pt_BR.po
src/: autostart.rs  config.rs  ddc.rs  main.rs  monitor.rs  preferences.rs  tray.rs  window.rs
