[package]
name = "gnome-brightness"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
ksni = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6.0"
tokio = { version = "1", features = ["rt"] }
async-channel = "2"
